--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.5.1
 Pillow==10.4.0
-opencv-python==4.10.0.84
-gunicorn==22.0.0  # Required for production server on Render
+opencv-python-headless==4.10.0.84  # Changed to headless version
+gunicorn==22.0.0
